# wasm-rust

./: Cargo.toml  ReadMe.md  rust-toolchain.toml
crates/wasm/: Cargo.toml  SAFETY.md
crates/wasm/src/: component.rs  host.rs  lib.rs  memory.rs  threading.rs  wasmir.rs
crates/wasm/tests/: wasmir_specification_tests.rs
docs/: PRD-WasmRust.md  TSD-WasmRust.md  project-structure.toml  wasmir-specification.md
src/: Cargo.toml
src/backend/cranelift/: Cargo.toml  indirect_call_optimizer.rs  integration.rs  lib.rs  mir_complexity.rs  mir_lowering.rs  mod.rs  size_analyzer.rs  streaming_optimizer.rs  thin_monomorphization.rs  thinning_pass.rs  type_descriptor.rs
src/backend/llvm/: Cargo.toml
tests/: cranelift_integration_tests.rs  cranelift_performance_properties.rs  property_binary_size_optimization.rs  property_externref_safety.rs  property_externref_type_safety.rs  property_project_structure.rs  property_sharedslice_safety.rs  property_thin_monomorphization.rs  structure_tests.rs  symbol_similarity_checker.rs
