[package]
name = "wasmrust-compiler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WasmRust compiler backend and runtime"
authors = ["WasmRust Team"]
repository = "https://github.com/wasmrust/wasmrust"
documentation = "https://docs.wasmrust.org/compiler"

[lib]
crate-type = ["rlib"]
path = "lib.rs"

[[bin]]
name = "wasmrust"
path = "bin/main.rs"

[dependencies]
# Compiler-specific dependencies
rustc_middle = "0.99.0"
rustc_target = "0.99.0"
rustc_codegen_cranelift = { version = "0.99.0", optional = true }
rustc_codegen_llvm = { version = "0.99.0", optional = true }

# WasmIR and runtime
wasm = { path = "../crates/wasm" }

# WASI support
wasi = { version = "0.12.0", optional = true }

[features]
default = ["cranelift"]
cranelift = ["rustc_codegen_cranelift"]
llvm = ["rustc_codegen_llvm"]
wasi = ["dep:wasi"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Browser-specific dependencies

[target.'cfg(target_os = "wasi")'.dependencies]
# WASI-specific dependencies

[lints.rust]
unexpected_cfgs = "warn"
