[package]
name = "wasmrust-codegen-llvm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM-optimized LLVM backend for WasmRust compiler"

[lib]
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
wasm = { path = "../../../crates/wasm" }
# rustc_codegen_llvm = "0.99.0"  # Placeholder - version doesn't exist yet

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Browser-specific optimizations

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
# WASI-specific dependencies

[features]
default = ["release-build"]
dev-build = []
release-build = ["pgo"]
pgo = []

[lints.rust]
unexpected_cfgs = "forbid"
